k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iicpc
  labels:
    app: iicpc-platform
